Teste de parse Gson e strings plurals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Playground</string>
+    <plurals name="video_conference_duration_time_full">
+        <item quantity="one">%1$d minuto</item>
+        <item quantity="other">%1$d minutos</item>
+    </plurals>
 
     <string name="video_conference_confirmation_description_success"><![CDATA[Sua reunião por vídeo com seu gerente Inter Black foi agendada para <b>%1$s,  às %2$s.</b><br /><br />Você acessa sua reunião aqui pelo app do Inter. Esperamos por você.]]></string>
 </resources>
