--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     </plurals>
 
     <string name="video_conference_confirmation_description_success"><![CDATA[Sua reunião por vídeo com seu gerente Inter Black foi agendada para <b>%1$s,  às %2$s.</b><br /><br />Você acessa sua reunião aqui pelo app do Inter. Esperamos por você.]]></string>
+    <string name="instrument_photo_description">Foto do instrumento</string>
 </resources>
